--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 
     </head>
     <body>
+    <h1>A0M33KAJ - Semestrálka</h1>
     <canvas id="myCanvas" width="1280" height="640" style="border:1px solid #000000;"/>
     <script src="client.min.js"></script>
     </body>
