moving only in 32*32 tiles + little refactoring

--- a/src/index.html
+++ b/src/index.html
@@ -39,11 +39,14 @@
                 <td>Move right</td>
             </tr>
             <tr>
-                <td>Enter</td>
+                <td colspan="2"><i>below can be used only when stationary</i>
+            </tr>
+            <tr>
+                <td>Enter </td>
                 <td>Primary action (e.g. pickup item)</td>
             </tr>
             <tr>
-                <td>B</td>
+                <td>B </td>
                 <td>Open backpack</td>
             </tr>
             <tr>
