css transitions, firefox stop animation fix

--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,12 @@
 <h1>A0M33KAJ - Semestrálka</h1>
 <div>
     <div id="canvasDiv">
-        <canvas id="myCanvas" width="1280" height="640"></canvas>
+        <canvas id="myCanvas" width="1280" height="640" ></canvas>
+        <div id="overCanvas"></div>
     </div>
-    <div>
+    <div id="controls">
         <h1>Controls</h1>
+        <button class="btn btn-success openControls"><span>Show controls</span></button>
         <table class="table table-bordered table-striped table-hover center">
             <tbody>
             <tr>
@@ -78,6 +80,13 @@
             </tbody>
         </table>
     </div>
+</div>
+<div id="github">
+    <a href="https://github.com/matyapav/kaj-semestralka" target="_blank">
+        View on
+        <br>
+        <img src="img/GitHub_Logo.png">
+    </a>
 </div>
 <script src="client.min.js"></script>
 </body>
